$Id: ChangeLog,v 1.534 2009/03/05 22:16:56 freckle Exp $

2009-03-05  Matthias Ringwald <mringwal@inf.ethz.ch>
    * arch/unix/dev/ostimer.c, arch/unix/os/nutinit.c:
         added return NULL to make compiler happy
    * arch/unix/os/thread.c:   fix function prototype for compiler
    * fs/pathops: unix emulation requires unistd.h as first include
    * Makedefs.unix-gcc, arch/unix/os/nutinit.c, dev/ihndlr.c,
      include/compiler.h, include/errno.h, include/netdb.h,
      include/stdio.h, include/time.h, include/unistd.h, include/arch/timer.h,
      include/arch/unix.h, include/dev/board.h, include/dev/debug.h,
      include/dev/irqreg.h, include/dev/uartavr.h, include/dev/usartavr.h,
      include/netinet/in.h, include/sys/atom.h, include/sys/nut_types.h,
      include/sys/thread.h, include/sys/types.h, net/confnet.c, os/nutinit.c,
      os/osdebug.c, os/thread.c, os/timer.c:
        use __NUT_EMULATION instead of __APPLE__, __linux__, or __CYGWIN__
    
2009-02-28  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* boot/bootmon/arp.c: Added ARP responder

	* boot/bootmon/ether.c: Answer to incomming ARP requests 
	  (Fixes arp timeout bug when downloading large files)

	* boot/bootmon/bootmon.c, boot/bootmon/dialog.c,
	  boot/bootmon/dialog.h, boot/bootmon/tftp.c, boot/bootmon/utils.c,
	  boot/bootmon/utils.h: 
          Fixed compiler warnings (signedness)

2009-02-22  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* include/net/errno.h: 
	  Added a deprecated warning.
	  Commended out all defines and include include/errno.h instead.
	  All defines in this file are duplicates of the one defined in
          include/errno.h, just with an offset of 10000. We don't need these
	  defines and just get conflicts. So remove this file ASAP

	* include/net/netdebug.h, net/igmp.c, net/igmpin.c, net/tcpout.c,
	  net/tcpsm.c, net/tcpsock.c:
	  Include "include/errno.h" instead of "include/net/errno.h"

	* include/cfg/udp.h: Added empty header for "in sourcetree"
	  compilation