@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.534 2009/03/05 22:16:56 freckle Exp $
+$Id: ChangeLog,v 1.535 2009/03/05 22:58:05 freckle Exp $
 
 2009-03-05  Matthias Ringwald <mringwal@inf.ethz.ch>
     * arch/unix/dev/ostimer.c, arch/unix/os/nutinit.c:
@@ -14,6 +14,7 @@ $Id: ChangeLog,v 1.534 2009/03/05 22:16:56 freckle Exp $
       include/sys/thread.h, include/sys/types.h, net/confnet.c, os/nutinit.c,
       os/osdebug.c, os/thread.c, os/timer.c:
         use __NUT_EMULATION instead of __APPLE__, __linux__, or __CYGWIN__
+    * crt/putf.c: don't follow __arm__ if __NUT_EMULATION__
     
 2009-02-28  Ole Reinhardt <ole.reinhardt@thermotemp.de>
 	* boot/bootmon/arp.c: Added ARP responder
